верстает header и главную страницу в десктоп масштабе

--- a/source/index.html
+++ b/source/index.html
@@ -5,9 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Стартовый шаблон</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <h1>Добро пожаловать в Лигу А.</h1>
+  <header class="page-header">
+    <div class="page-header__wrapper">
+      <a class="page-header__telephone" href="tel:+ (972) 2 – 621 – 6581">+ (972) 2 – 621 – 6581</a>
+      <a class="page-header__logo" href="#">
+        <img src="./img/logo_desktop@1x.png" alt="Логотип программы обучения в Израиле Masa" width="137" height="48">
+      </a>
+      <button class="page-header__callback" type="button">Заказать звонок</button>
+    </div>
+  </header>
+  <main>
+    <section class="intro">
+      <h1 class="visually-hidden">Программа обучения еврейской молодежи в Израиле Masa</h1>
+      <div class="intro__israel"></div>
+      <div class="intro__girl"></div>
+      <h2>Учёба, путешествие и карьера для еврейской молодёжи</h2>
+      <span></span>
+    </section>
+  </main>
 </body>
 </html>
