верстает модальной окно формы обратной связи в десктоп разрешении без валидации и скрипта

--- a/source/index.html
+++ b/source/index.html
@@ -30,6 +30,33 @@
       <h2>Учёба, путешествие и карьера для еврейской молодёжи</h2>
       <span></span>
     </section>
+
+
+
+
+    <div class="modal-position">
+      <section class="modal modal-order-callback">
+        <h2 class="visually-hidden">Форма заказа обратного звонка</h2>
+        <p class="modal-order-callback__title">Заказать звонок</p>
+        <p class="modal-order-callback__message">Оставьте ваши контактные данные, мы свяжемся  с вами в течение рабочего дня и обязательно поможем найти ответ на ваш вопрос!</p>
+        <form class="modal-order-callback__form">
+          <input type="text" name="name" placeholder="имя">
+          <input type="text" name="telephone" placeholder="телефон">
+          <button type="submit">
+            Перезвоните мне
+          </button>
+          <label>
+            <input class="modal-order-callback__checkbox" type="checkbox" name="agree">
+            <span class="modal-order-callback__custom-checkbox"></span>
+            Нажимая на кнопку, вы даёте согласие на обработку персональных данных
+          </label>
+        </form>
+        <button class="modal-order-callback__close-button"></button>
+      </section>
+    </div>
+
+
+
   </main>
 </body>
 </html>
