--- a/source/index.html
+++ b/source/index.html
@@ -40,13 +40,11 @@
         <p class="modal-order-callback__title">Заказать звонок</p>
         <p class="modal-order-callback__message">Оставьте ваши контактные данные, мы свяжемся  с вами в течение рабочего дня и обязательно поможем найти ответ на ваш вопрос!</p>
         <form class="modal-order-callback__form">
-          <input type="text" name="name" placeholder="имя">
-          <input type="text" name="telephone" placeholder="телефон" required>
-          <button class="btn" type="submit">
-            Перезвоните мне
-          </button>
+          <input type="text" name="name" placeholder="имя" required>
+          <input type="number" name="telephone" placeholder="телефон" required>
+          <input class="btn" type="submit" value="Перезвоните мне">
           <label>
-            <input class="modal-order-callback__checkbox" type="checkbox" name="agree">
+            <input class="modal-order-callback__checkbox" type="checkbox" name="agree" required>
             <span class="modal-order-callback__custom-checkbox"></span>
             Нажимая на кнопку, вы даёте согласие на обработку персональных данных
           </label>
@@ -65,7 +63,7 @@
     </div>
 
 
-
+    <script src="./js/script.js"></script>
   </main>
 </body>
 </html>
