--- a/source/index.html
+++ b/source/index.html
@@ -11,10 +11,8 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo" href="#">
-        <picture>
-          <source media="(min-width: 1024px)" srcset="./img/logo_desktop@1x.png 1x, ./img/logo_desktop@2x.png 2x">
-          <img src="./img/logo_mobile@1x.png" srcset="img/logo_mobile@2x.png 2x" alt="Логотип программы обучения в Израиле Masa" width="120" height="42">
-        </picture>
+        <source media="(min-width: 1024px)" srcset="./img/logo_desktop@1x.png 1x, ./img/logo_desktop@2x.png 2x">
+        <img src="./img/logo_mobile@1x.png" srcset="img/logo_mobile@2x.png 2x" alt="Логотип программы обучения в Израиле Masa" width="120" height="42">
       </a>
       <div class="page-header__callback-wrapper">
         <a class="page-header__telephone" href="tel:+ (972) 2 – 621 – 6581">+ (972) 2 – 621 – 6581</a>
@@ -31,15 +29,12 @@
       <span></span>
     </section>
 
-
-
-
     <div class="modal-position">
       <section class="modal-order-callback">
         <h2 class="visually-hidden">Форма заказа обратного звонка</h2>
         <p class="modal-order-callback__title">Заказать звонок</p>
         <p class="modal-order-callback__message">Оставьте ваши контактные данные, мы свяжемся  с вами в течение рабочего дня и обязательно поможем найти ответ на ваш вопрос!</p>
-        <form class="modal-order-callback__form">
+        <form autocomplete="off" class="modal-order-callback__form">
           <input type="text" name="name" placeholder="имя" required>
           <input type="number" name="telephone" placeholder="телефон" required>
           <input class="btn" type="submit" value="Перезвоните мне">
