сохраняет проект перед правкой шапки и главного экрана

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
         <p class="modal-order-callback__message">Оставьте ваши контактные данные, мы свяжемся  с вами в течение рабочего дня и обязательно поможем найти ответ на ваш вопрос!</p>
         <form autocomplete="off" class="modal-order-callback__form">
           <input type="text" name="name" placeholder="имя" required>
-          <input type="number" name="telephone" placeholder="телефон" required>
+          <input type="tel" name="telephone" placeholder="телефон" required>
           <input class="btn" type="submit" value="Перезвоните мне">
           <label>
             <input class="modal-order-callback__checkbox" type="checkbox" name="agree" required>
