--- a/source/index.html
+++ b/source/index.html
@@ -8,26 +8,27 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <header class="page-header">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo" href="#">
-        <source media="(min-width: 1024px)" srcset="./img/logo_desktop@1x.png 1x, ./img/logo_desktop@2x.png 2x">
-        <img src="./img/logo_mobile@1x.png" srcset="img/logo_mobile@2x.png 2x" alt="Логотип программы обучения в Израиле Masa" width="120" height="42">
-      </a>
-      <div class="page-header__callback-wrapper">
-        <a class="page-header__telephone" href="tel:+ (972) 2 – 621 – 6581">+ (972) 2 – 621 – 6581</a>
-        <button class="page-header__callback" type="button">Заказать звонок</button>
+  <div class="intro-header-wrapper">
+    <header class="page-header">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo" href="#">
+          <img src="./img/logo_desktop@1x.png" srcset="./img/logo_desktop@2x.png 2x" alt="Логотип программы обучения в Израиле Masa" width="137" height="48">
+        </a>
+        <div class="page-header__callback-wrapper">
+          <a class="page-header__telephone" href="tel:+ (972) 2 – 621 – 6581">+ (972) 2 – 621 – 6581</a>
+          <button class="page-header__callback" type="button">Заказать звонок</button>
+        </div>
       </div>
-    </div>
-  </header>
-  <main>
-    <section class="intro">
+    </header>
+    <div class="intro">
       <h1 class="visually-hidden">Программа обучения еврейской молодежи в Израиле Masa</h1>
       <div class="intro__israel"></div>
       <div class="intro__girl"></div>
-      <h2>Учёба, путешествие и карьера для еврейской молодёжи</h2>
+<!--      <h2>Учёба, путешествие и карьера для еврейской молодёжи</h2>-->
       <span></span>
-    </section>
+    </div>
+  </div>
+  <main>
 
     <div class="modal-position">
       <section class="modal-order-callback">
