переписывает стили дл шапки и интро в десктоп разрешении

--- a/source/index.html
+++ b/source/index.html
@@ -22,9 +22,7 @@
     </header>
     <div class="intro">
       <h1 class="visually-hidden">Программа обучения еврейской молодежи в Израиле Masa</h1>
-      <div class="intro__israel"></div>
-      <div class="intro__girl"></div>
-<!--      <h2>Учёба, путешествие и карьера для еврейской молодёжи</h2>-->
+      <h2>Учёба, путешествие и карьера для еврейской молодёжи</h2>
       <span></span>
     </div>
   </div>
