--- a/source/index.html
+++ b/source/index.html
@@ -28,6 +28,17 @@
     </div>
   </div>
   <main>
+    <section class="about">
+      <h2>О программе</h2>
+      <p>«Маса» — совместный проект правительства Израиля и Еврейского агентства Сохнут. Более 250 учебных программ (60 на русском) и возможность стажировки в Израиле. В течение освоения программ предусмотрен грант от 4200 до 8400$.</p>
+      <div class="about__img-wrapper">
+        <picture>
+          <source media="(max-width: 767px)" srcset="./img/photo_about_mobile@1x.png 1x, ./img/photo_about_mobile@2x.png 2x">
+          <img src="./img/photo_about_desktop@1x.jpg" srcset="./img/photo_about_desktop@2x.jpg 2x" alt="Фотография участников программы Маса" width="870" height="460">
+        </picture>
+      </div>
+    </section>
+
 
     <div class="modal-position">
       <section class="modal-order-callback">
