реализовывает переключение программ обучения в десктоп версии на js

--- a/source/index.html
+++ b/source/index.html
@@ -46,24 +46,64 @@
       <h2>Программы</h2>
       <div class="programms__wrapper">
         <ul>
-          <li class="programms__item">
+          <li class="programms__item programms__item--general">
             <button class="programms__button programms__button--general">Общие</button>
           </li>
-          <li class="programms__item programms__item--active">
-            <button class="programms__button programms__button--study">академические</button>
+          <li class="programms__item programms__item--study programms__item--active">
+            <button class="programms__button programms__button--study">Академические</button>
           </li>
-          <li class="programms__item">
+          <li class="programms__item programms__item--work">
             <button class="programms__button programms__button--work">Стажировки</button>
           </li>
-          <li class="programms__item">
+          <li class="programms__item programms__item--volunteer">
             <button class="programms__button programms__button--volunteer">Волонтёрство</button>
           </li>
-          <li class="programms__item">
+          <li class="programms__item programms__item--religion">
             <button class="programms__button programms__button--religion">Религиозные</button>
           </li>
         </ul>
-        <div class="programms__about programms__about--study">
+        <div class="programms__about programms__about--general">
+          <h3>Общие</h3>
+          <p>
+            Провести семестр или год за рубежом, знакомясь с различными культурами  и идеями, традициями и стилем жизни — вот что такое учеба за границей! Израиль — это не только центр религиозного мира, это  также академический центр, живая лаборатория идей и творческого исследования.
+          </p>
+          <p>
+            Может быть, Вы заинтересованы в изучении социологии, мира, юриспруденции, биологии, сравнительной религии, законодательного  и делового администрирования или искусства? Здесь, в Израиле, Вы сможете
+            изучить все это в удивительной университетской среде.
+          </p>
+        </div>
+        <div class="programms__about programms__about--active programms__about--study">
           <h3>Академические</h3>
+          <p>
+            Провести семестр или год за рубежом, знакомясь с различными культурами  и идеями, традициями и стилем жизни — вот что такое учеба за границей! Израиль — это не только центр религиозного мира, это  также академический центр, живая лаборатория идей и творческого исследования.
+          </p>
+          <p>
+            Может быть, Вы заинтересованы в изучении социологии, мира, юриспруденции, биологии, сравнительной религии, законодательного  и делового администрирования или искусства? Здесь, в Израиле, Вы сможете
+            изучить все это в удивительной университетской среде.
+          </p>
+        </div>
+        <div class="programms__about programms__about--work">
+          <h3>Стажировки</h3>
+          <p>
+            Провести семестр или год за рубежом, знакомясь с различными культурами  и идеями, традициями и стилем жизни — вот что такое учеба за границей! Израиль — это не только центр религиозного мира, это  также академический центр, живая лаборатория идей и творческого исследования.
+          </p>
+          <p>
+            Может быть, Вы заинтересованы в изучении социологии, мира, юриспруденции, биологии, сравнительной религии, законодательного  и делового администрирования или искусства? Здесь, в Израиле, Вы сможете
+            изучить все это в удивительной университетской среде.
+          </p>
+        </div>
+        <div class="programms__about programms__about--volunteer">
+          <h3>Волонтёрство</h3>
+          <p>
+            Провести семестр или год за рубежом, знакомясь с различными культурами  и идеями, традициями и стилем жизни — вот что такое учеба за границей! Израиль — это не только центр религиозного мира, это  также академический центр, живая лаборатория идей и творческого исследования.
+          </p>
+          <p>
+            Может быть, Вы заинтересованы в изучении социологии, мира, юриспруденции, биологии, сравнительной религии, законодательного  и делового администрирования или искусства? Здесь, в Израиле, Вы сможете
+            изучить все это в удивительной университетской среде.
+          </p>
+        </div>
+        <div class="programms__about programms__about--religion">
+          <h3>Религиозные</h3>
           <p>
             Провести семестр или год за рубежом, знакомясь с различными культурами  и идеями, традициями и стилем жизни — вот что такое учеба за границей! Израиль — это не только центр религиозного мира, это  также академический центр, живая лаборатория идей и творческого исследования.
           </p>
