верстает блок хочу поехать во всех разрешениях без js

--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,6 @@
         </picture>
       </div>
     </section>
-
     <section class="programms">
       <h2>Программы</h2>
       <div class="programms__wrapper">
@@ -114,6 +113,17 @@
         </div>
       </div>
     </section>
+    <section class="want-go">
+      <h2>Хочу поехать!</h2>
+      <p>Оставьте свой телефон и мы свяжемся с вами, подберём куратора и ответим на все вопросы!</p>
+      <form>
+        <div class="want-go__form-wrapper">
+          <input type="tel" placeholder="телефон">
+          <button class="btn" type="submit">Перезвоните мне</button>
+        </div>
+      </form>
+    </section>
+
 
 
     <div class="modal-position">
