верстает 'секцию как поехать' во всех разрешениях

--- a/source/index.html
+++ b/source/index.html
@@ -123,6 +123,44 @@
         </div>
       </form>
     </section>
+    <section class="how-go">
+      <div class="how-go__wrapper">
+        <h2>Как поехать</h2>
+        <p class="how-go__about">
+          Чтобы узнать подробнее о программе, свяжитесь с координатором в вашем городе. Вы получите актуальные сведения о доступных программах и городах, в которых можете пройти программу.
+        </p>
+        <b>
+          Чтобы иметь возможность получить грант на обучение  от 4200 до 8400$, вы должны:
+        </b>
+        <ul>
+          <li>
+            <p class="how-go__condition">
+              Быть в возрасте от 16 до 30 лет
+            </p>
+          </li>
+          <li>
+            <p class="how-go__condition">
+              Иметь оконченное среднее образование
+            </p>
+          </li>
+          <li>
+            <p class="how-go__condition">
+              Иметь документально подтверждённые еврейские корни  и пройти консульскую проверку
+            </p>
+          </li>
+          <li>
+            <p class="how-go__condition">
+              За последние 2 года быть не больше 3х месяцев
+              подряд непрерывно в Израиле.
+            </p>
+          </li>
+        </ul>
+        <p class="how-go__budget">
+          Если вы не подходите по этим правилам, вы всё равно можете
+          принять участие в программе «Маса», оплатив её полную стоимость.
+        </p>
+      </div>
+    </section>
 
 
 
