--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,7 @@
   <link rel="preload" href="./fonts/Montserrat-Bold.woff2" as="font">
   <link rel="preload" href="./fonts/Montserrat-Regular.woff2" as="font">
   <link rel="preload" href="./fonts/Raleway-Bold.woff2" as="font">
+  <script src="./js/svguse.js" defer></script>
 </head>
 <body>
   <div class="intro-header-wrapper">
@@ -159,6 +160,63 @@
           Если вы не подходите по этим правилам, вы всё равно можете
           принять участие в программе «Маса», оплатив её полную стоимость.
         </p>
+      </div>
+    </section>
+    <section class="live-israel">
+      <h2>Жизнь в израиле</h2>
+      <p class="live-israel__about">Помимо учёбы, в рамках программы у вас будет возможность путешествовать по стране и познакомиться с богатой культурно-исторической жизнью Израиля и его жителей.</p>
+      <ul class="live-israel__list">
+        <li class="live-israel__first-photo">
+          <img src="./img/live_israel1@1x.png" srcset="./img/live_israel1@2x.png 2x" alt="Экскурсии по Израилю" width="482" height="733">
+          <p>Экскурсии по Израилю  и знакомство с его историей</p>
+        </li>
+        <div class="live-israel__photo-wrapper">
+          <li class="live-israel__second-photo">
+            <img src="./img/live_israel2@1x.png" srcset="./img/live_israel2@2x.png 2x" alt="Изучение иврита" width="211" height="319">
+            <p>Изучение иврита</p>
+          </li>
+          <li class="live-israel__third-photo">
+            <img src="./img/live_israel3@1x.png" srcset="./img/live_israel3@2x.png 2x" alt="Обучение актуальным специальностям" width="411" height="319">
+            <p>Обучение современным навыкам и профессиям</p>
+          </li>
+          <li class="live-israel__fourth-photo">
+            <img src="./img/live_israel4@1x.png" srcset="./img/live_israel4@2x.png 2x" alt="Молодежные проекты" width="411" height="319">
+            <p>Совместные творческие проекты с израильской молодёжью</p>
+          </li>
+          <li class="live-israel__fifth-photo">
+          <img src="./img/live_israel5@1x.png" srcset="./img/live_israel5@2x.png 2x" alt="Развитие лидерства" width="214" height="319">
+          <p>Развитие лидерства</p>
+        </li>
+        </div>
+      </ul>
+      <ul class="live-israel__indicators">
+        <li class="live-israel__indicator live-israel__indicator--active live-israel__indicator--first">
+          <span>Первое фото</span>
+        </li>
+        <li class="live-israel__indicator live-israel__indicator--second">
+          <span>Второе фото</span>
+        </li>
+        <li class="live-israel__indicator live-israel__indicator--third">
+          <span>Третье фото</span>
+        </li>
+        <li class="live-israel__indicator live-israel__indicator--fourth">
+          <span>Четвертое фото</span>
+        </li>
+        <li class="live-israel__indicator live-israel__indicator--fifth">
+          <span>Пятое фото</span>
+        </li>
+      </ul>
+    </section>
+    <section class="masa-photo">
+      <div class="masa-photo__wrapper">
+        <h2>#masaisrael</h2>
+        <p>Познакомьтесь с программой от первого лица! Многие участники ведут блоги и фотодневники  о жизни, учёбе и путешествиях в Израиле.</p>
+        <a class="masa-photo__watch-btn btn" href="#">
+          смотреть фото
+          <svg class="masa-photo__icon-insta" width="24" height="24">
+            <use xlink:href="./img/sprite_auto.svg#icon-instagram"></use>
+          </svg>
+        </a>
       </div>
     </section>
 
