верстает блок частные вопросы во всех разрешениях с логикой открытия ответов на вопросы на js

--- a/source/index.html
+++ b/source/index.html
@@ -219,6 +219,35 @@
         </a>
       </div>
     </section>
+    <section class="faq">
+      <h2>Частые вопросы</h2>
+      <ul>
+        <li class="faq__question faq__question--first">
+          <h3>Кто организатор? Какие сроки у программы?</h3>
+          <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+        </li>
+        <li class="faq__question faq__question--second">
+          <h3>Что такое грант на обучение?</h3>
+          <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+        </li>
+        <li class="faq__question faq__question--third faq__question--active">
+          <h3>Как определяется стоимость программы?</h3>
+          <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+        </li>
+        <li class="faq__question faq__question--fourth">
+          <h3>Что такое грант на обучение?</h3>
+          <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+        </li>
+        <li class="faq__question faq__question--fifth">
+          <h3>Признаётся ли учеба в рамках проекта для дальнейшего обучения?</h3>
+          <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+        </li>
+        <li class="faq__question faq__question--sixth">
+          <h3>Как выглдядит полный процесс регистрации  на программу «Маса»?</h3>
+          <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+        </li>
+      </ul>
+    </section>
 
 
 
