--- a/source/index.html
+++ b/source/index.html
@@ -222,31 +222,184 @@
     <section class="faq">
       <h2>Частые вопросы</h2>
       <ul>
-        <li class="faq__question faq__question--first">
+        <li class="faq__question faq__question--first" tabindex="0">
           <h3>Кто организатор? Какие сроки у программы?</h3>
           <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
         </li>
-        <li class="faq__question faq__question--second">
+        <li class="faq__question faq__question--second" tabindex="0">
           <h3>Что такое грант на обучение?</h3>
           <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
         </li>
-        <li class="faq__question faq__question--third faq__question--active">
+        <li class="faq__question faq__question--third faq__question--active" tabindex="0">
           <h3>Как определяется стоимость программы?</h3>
           <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
         </li>
-        <li class="faq__question faq__question--fourth">
+        <li class="faq__question faq__question--fourth" tabindex="0">
           <h3>Что такое грант на обучение?</h3>
           <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
         </li>
-        <li class="faq__question faq__question--fifth">
+        <li class="faq__question faq__question--fifth" tabindex="0">
           <h3>Признаётся ли учеба в рамках проекта для дальнейшего обучения?</h3>
           <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
         </li>
-        <li class="faq__question faq__question--sixth">
+        <li class="faq__question faq__question--sixth" tabindex="0">
           <h3>Как выглдядит полный процесс регистрации  на программу «Маса»?</h3>
           <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
         </li>
       </ul>
+    </section>
+    <section class="reviews">
+      <h2>Отзывы</h2>
+      <ul class="reviews__list">
+        <li class="reviews__item reviews__item--first">
+          <img src="./img/img_Testimonials_desktop@1x.jpg" srcset="./img/img_Testimonials_desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <div class="reviews__wrapper">
+            <div class="reviews__content-wrapper">
+              <h3>Валерия Первая</h3>
+              <p class="reviews__dates-and-city">
+                <span>Программа:</span>
+                <span>Арт-Тель, февраль-сентябрь 2017</span>
+              </p>
+              <p class="reviews__first-paragraph">
+                Долго выбирая программу, на которую ехать - я определилась, взяла на 5 месяцев «иврит как культура». Мне очень повезло оказаться в надежных и заботливых руках Анны, Юлии и Олега.
+              </p>
+              <p class="reviews__second-paragraph">
+                С первой же встречи тебе дают понять - что ты не один, у тебя есть практически круглосуточная поддержка по любым вопросам. Тебе предоставляют готовое удобное расписание, жилье, приятные встречи, языковой курс а еще и поездки всей программой в разные уголки страны.
+              </p>
+              <a class="reviews__more-info" href="#">Читать подробнее</a>
+            </div>
+          </div>
+        </li>
+        <li class="reviews__item reviews__item--second">
+          <img src="./img/img_Testimonials_desktop@1x.jpg" srcset="./img/img_Testimonials_desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <div class="reviews__wrapper">
+            <div class="reviews__content-wrapper">
+              <h3>Евгения Вторая</h3>
+              <p class="reviews__dates-and-city">
+                <span>Программа:</span>
+                <span>Арт-Тель, февраль-сентябрь 2017</span>
+              </p>
+              <p class="reviews__first-paragraph">
+                Долго выбирая программу, на которую ехать - я определилась, взяла на 5 месяцев «иврит как культура». Мне очень повезло оказаться в надежных и заботливых руках Анны, Юлии и Олега.
+              </p>
+              <p class="reviews__second-paragraph">
+                С первой же встречи тебе дают понять - что ты не один, у тебя есть практически круглосуточная поддержка по любым вопросам. Тебе предоставляют готовое удобное расписание, жилье, приятные встречи, языковой курс а еще и поездки всей программой в разные уголки страны.
+              </p>
+              <a class="reviews__more-info" href="#">Читать подробнее</a>
+            </div>
+          </div>
+        </li>
+        <li class="reviews__item reviews__item--third reviews__item--active">
+          <img src="./img/img_Testimonials_desktop@1x.jpg" srcset="./img/img_Testimonials_desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <div class="reviews__wrapper">
+            <div class="reviews__content-wrapper">
+              <h3>Ольга Михайлова</h3>
+              <p class="reviews__dates-and-city">
+                <span>Программа:</span>
+                <span>Арт-Тель, февраль-сентябрь 2017</span>
+              </p>
+              <p class="reviews__first-paragraph">
+                Долго выбирая программу, на которую ехать - я определилась, взяла на 5 месяцев «иврит как культура». Мне очень повезло оказаться в надежных и заботливых руках Анны, Юлии и Олега.
+              </p>
+              <p class="reviews__second-paragraph">
+                С первой же встречи тебе дают понять - что ты не один, у тебя есть практически круглосуточная поддержка по любым вопросам. Тебе предоставляют готовое удобное расписание, жилье, приятные встречи, языковой курс а еще и поездки всей программой в разные уголки страны.
+              </p>
+              <a class="reviews__more-info" href="#">Читать подробнее</a>
+            </div>
+          </div>
+        </li>
+        <li class="reviews__item reviews__item--fourth">
+          <img src="./img/img_Testimonials_desktop@1x.jpg" srcset="./img/img_Testimonials_desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <div class="reviews__wrapper">
+            <div class="reviews__content-wrapper">
+              <h3>Мария Четвертая</h3>
+              <p class="reviews__dates-and-city">
+                <span>Программа:</span>
+                <span>Арт-Тель, февраль-сентябрь 2017</span>
+              </p>
+              <p class="reviews__first-paragraph">
+                Долго выбирая программу, на которую ехать - я определилась, взяла на 5 месяцев «иврит как культура». Мне очень повезло оказаться в надежных и заботливых руках Анны, Юлии и Олега.
+              </p>
+              <p class="reviews__second-paragraph">
+                С первой же встречи тебе дают понять - что ты не один, у тебя есть практически круглосуточная поддержка по любым вопросам. Тебе предоставляют готовое удобное расписание, жилье, приятные встречи, языковой курс а еще и поездки всей программой в разные уголки страны.
+              </p>
+              <a class="reviews__more-info" href="#">Читать подробнее</a>
+            </div>
+          </div>
+        </li>
+        <li class="reviews__item reviews__item--fifth">
+          <img src="./img/img_Testimonials_desktop@1x.jpg" srcset="./img/img_Testimonials_desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <div class="reviews__wrapper">
+            <div class="reviews__content-wrapper">
+              <h3>Наталья Пятая</h3>
+              <p class="reviews__dates-and-city">
+                <span>Программа:</span>
+                <span>Арт-Тель, февраль-сентябрь 2017</span>
+              </p>
+              <p class="reviews__first-paragraph">
+                Долго выбирая программу, на которую ехать - я определилась, взяла на 5 месяцев «иврит как культура». Мне очень повезло оказаться в надежных и заботливых руках Анны, Юлии и Олега.
+              </p>
+              <p class="reviews__second-paragraph">
+                С первой же встречи тебе дают понять - что ты не один, у тебя есть практически круглосуточная поддержка по любым вопросам. Тебе предоставляют готовое удобное расписание, жилье, приятные встречи, языковой курс а еще и поездки всей программой в разные уголки страны.
+              </p>
+              <a class="reviews__more-info" href="#">Читать подробнее</a>
+            </div>
+          </div>
+        </li>
+        <li class="reviews__item reviews__item--sixth">
+          <img src="./img/img_Testimonials_desktop@1x.jpg" srcset="./img/img_Testimonials_desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <div class="reviews__wrapper">
+            <div class="reviews__content-wrapper">
+              <h3>Анна Шестая</h3>
+              <p class="reviews__dates-and-city">
+                <span>Программа:</span>
+                <span>Арт-Тель, февраль-сентябрь 2017</span>
+              </p>
+              <p class="reviews__first-paragraph">
+                Долго выбирая программу, на которую ехать - я определилась, взяла на 5 месяцев «иврит как культура». Мне очень повезло оказаться в надежных и заботливых руках Анны, Юлии и Олега.
+              </p>
+              <p class="reviews__second-paragraph">
+                С первой же встречи тебе дают понять - что ты не один, у тебя есть практически круглосуточная поддержка по любым вопросам. Тебе предоставляют готовое удобное расписание, жилье, приятные встречи, языковой курс а еще и поездки всей программой в разные уголки страны.
+              </p>
+              <a class="reviews__more-info" href="#">Читать подробнее</a>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <div class="reviews__footer-wrapper">
+        <div class="reviews__counter-buttons-wrapper">
+          <p class="reviews__page-counter">
+            <span class="reviews__start-review">3 </span><span class="reviews__finish-review">/ 6</span>
+          </p>
+          <div class="reviews__buttons-wrapper">
+            <button class="reviews__previous-review">предыдущий отзыв</button>
+            <button class="reviews__next-review">следующий отзыв</button>
+          </div>
+        </div>
+        <ul class="reviews__social-list">
+          <li>
+            <a href="#">Наш фейсбук
+              <svg class="reviews__icon-facebook" width="24" height="24">
+                <use xlink:href="./img/sprite_auto.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#">Наш твиттер
+              <svg class="reviews__icon-twitter" width="24" height="24">
+                <use xlink:href="./img/sprite_auto.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#">Наш инстаграм
+              <svg class="reviews__icon-instagram" width="24" height="24">
+                <use xlink:href="./img/sprite_auto.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
 
