--- a/source/index.html
+++ b/source/index.html
@@ -401,6 +401,72 @@
         </ul>
       </div>
     </section>
+    <section class="details">
+      <h2>Узнать подробности</h2>
+
+      <div class="details__choose-city">
+        <span>Ваш город: </span><span>новосибирск</span>
+      </div>
+
+      <div class="details__kurator-info">
+        <img src="./img/kurator_mobile@1x.jpg" srcset="./img/kurator_mobile@2x.jpg 2x" alt="Куратор Анна Горелик" width="112" height="112">
+        <div class="details__kurator-info-wrapper">
+          <p>
+            <span class="details__your-kurator">Ваш куратор: </span>Анна Горелик
+          </p>
+          <p>
+            Новосибирск, ул. Щетинкина 68, культурный центр «Бейт Менахем»
+          </p>
+          <ul class="details__social-list">
+            <li>
+              <a href="#">Наш фейсбук
+                <svg class="reviews__icon-facebook" width="24" height="24">
+                  <use xlink:href="./img/sprite_auto.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">Наш вацап
+                <svg class="reviews__icon-whatsup" width="24" height="24">
+                  <use xlink:href="./img/sprite_auto.svg#icon-whatsapp"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">Наш телеграм
+                <svg class="reviews__icon-telegram" width="24" height="24">
+                  <use xlink:href="./img/sprite_auto.svg#icon-telegram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <p class="details__about-kurator">
+        Куратор является опытным специалистом агентства Сохнут  и знает о проекте «Маса» всё! Свяжитесь с куратором,  узнайте подробнее о программах и выберите свою !
+      </p>
+
+      <div class="details__bottom-wrapper">
+        <div class="details__form-text-wrapper">
+          <p>
+            Оставьте ваши контакты, если у вас
+            остались вопросы — мы на них ответим!
+          </p>
+          <p>
+            Мы не передаём данные третьим лицам. Ваши данные будут в безопасности и вам не придёт спам от нас!
+          </p>
+        </div>
+
+        <form class="details__form" autocomplete="off">
+          <div class="details__form-wrapper">
+            <input type="text" name="name" placeholder="имя" required>
+            <input type="tel" name="telephone" placeholder="телефон" required>
+            <button class="btn" type="submit">Перезвоните мне</button>
+          </div>
+        </form>
+      </div>
+    </section>
 
 
 
