чуть поправил синтаксис фонов и расхождения с макетом

--- a/source/index.html
+++ b/source/index.html
@@ -463,7 +463,9 @@
       </div>
     </section>
     <footer class="page-footer">
-      <img src="./img/logo_footer_desktop@1x.png" srcset="./img/logo_footer_desktop@2x.png" alt="Логотип программы маса" width="85" height="27">
+      <a class="page-footer__logo" href="#">
+        <img src="./img/logo_footer_desktop@1x.png" srcset="./img/logo_footer_desktop@2x.png" alt="Логотип программы маса" width="85" height="27">
+      </a>
       <p>
         Copyright someDesignCompany ©2019
       </p>
@@ -491,9 +493,6 @@
         </li>
       </ul>
     </footer>
-
-
-
     <div class="modal-position">
       <section class="modal-order-callback">
         <h2 class="visually-hidden">Форма заказа обратного звонка</h2>
@@ -512,7 +511,6 @@
         <button class="modal-order-callback__close-button"></button>
       </section>
 
-
       <section class="modal-success">
         <span></span>
         <h2 class="modal-success__title">Заявка принята</h2>
@@ -521,8 +519,6 @@
         <button class="modal-order-callback__close-button"></button>
       </section>
     </div>
-
-
     <script src="./js/script.js"></script>
   </main>
 </body>
