--- a/source/index.html
+++ b/source/index.html
@@ -160,30 +160,34 @@
     <section class="live-israel">
       <h2>Жизнь в израиле</h2>
       <p class="live-israel__about">Помимо учёбы, в рамках программы у вас будет возможность путешествовать по стране и познакомиться с богатой культурно-исторической жизнью Израиля и его жителей.</p>
-      <ul class="live-israel__list">
-        <li class="live-israel__first-photo">
+      <div class="live-israel__photos">
+        <div class="live-israel__first-photo">
           <img src="./img/live-israel1@1x.png" srcset="./img/live-israel1@2x.png 2x" alt="Экскурсии по Израилю" width="482" height="733">
           <p>Экскурсии по Израилю  и знакомство с его историей</p>
-        </li>
+        </div>
         <div class="live-israel__photo-wrapper">
-          <li class="live-israel__second-photo">
-            <img src="./img/live-israel2@1x.png" srcset="./img/live-israel2@2x.png 2x" alt="Изучение иврита" width="211" height="319">
-            <p>Изучение иврита</p>
-          </li>
-          <li class="live-israel__third-photo">
-            <img src="./img/live-israel3@1x.png" srcset="./img/live-israel3@2x.png 2x" alt="Обучение актуальным специальностям" width="411" height="319">
-            <p>Обучение современным навыкам и профессиям</p>
-          </li>
-          <li class="live-israel__fourth-photo">
+          <div class="live-israel__first-couple-photos-wrapper">
+              <div class="live-israel__second-photo">
+                <img src="./img/live-israel2@1x.png" srcset="./img/live-israel2@2x.png 2x" alt="Изучение иврита" width="211" height="319">
+                <p>Изучение иврита</p>
+              </div>
+              <div class="live-israel__third-photo">
+                <img src="./img/live-israel3@1x.png" srcset="./img/live-israel3@2x.png 2x" alt="Обучение актуальным специальностям" width="411" height="319">
+                <p>Обучение современным навыкам и профессиям</p>
+            </div>
+          </div>
+         <div class="live-israel__second-couple-photos-wrapper">
+          <div class="live-israel__fourth-photo">
             <img src="./img/live-israel4@1x.png" srcset="./img/live-israel4@2x.png 2x" alt="Молодежные проекты" width="411" height="319">
             <p>Совместные творческие проекты с израильской молодёжью</p>
-          </li>
-          <li class="live-israel__fifth-photo">
-          <img src="./img/live-israel5@1x.png" srcset="./img/live-israel5@2x.png 2x" alt="Развитие лидерства" width="214" height="319">
-          <p>Развитие лидерства</p>
-        </li>
+          </div>
+          <div class="live-israel__fifth-photo">
+            <img src="./img/live-israel5@1x.png" srcset="./img/live-israel5@2x.png 2x" alt="Развитие лидерства" width="214" height="319">
+            <p>Развитие лидерства</p>
+          </div>
+         </div>
         </div>
-      </ul>
+      </div>
       <ul class="live-israel__indicators">
         <li class="live-israel__indicator live-israel__indicator--active live-israel__indicator--first">
           <span>Первое фото</span>
@@ -247,7 +251,7 @@
       <h2>Отзывы</h2>
       <ul class="reviews__list">
         <li class="reviews__item reviews__item--first">
-          <img src="./img/img-Testimonials-desktop@1x.jpg" srcset="./img/img-Testimonials-desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <img src="./img/img-Testimonials-desktop@1x.png" srcset="./img/img-Testimonials-desktop@2x.png 2x" alt="Ольга Михайлова" width="364" height="480">
           <div class="reviews__wrapper">
             <div class="reviews__content-wrapper">
               <h3>Валерия Первая</h3>
@@ -266,7 +270,7 @@
           </div>
         </li>
         <li class="reviews__item reviews__item--second">
-          <img src="./img/img-Testimonials-desktop@1x.jpg" srcset="./img/img-Testimonials-desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <img src="./img/img-Testimonials-desktop@1x.png" srcset="./img/img-Testimonials-desktop@2x.png 2x" alt="Ольга Михайлова" width="364" height="480">
           <div class="reviews__wrapper">
             <div class="reviews__content-wrapper">
               <h3>Евгения Вторая</h3>
@@ -285,7 +289,7 @@
           </div>
         </li>
         <li class="reviews__item reviews__item--third reviews__item--active">
-          <img src="./img/img-Testimonials-desktop@1x.jpg" srcset="./img/img-Testimonials-desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <img src="./img/img-Testimonials-desktop@1x.png" srcset="./img/img-Testimonials-desktop@2x.png 2x" alt="Ольга Михайлова" width="364" height="480">
           <div class="reviews__wrapper">
             <div class="reviews__content-wrapper">
               <h3>Ольга Михайлова</h3>
@@ -304,7 +308,7 @@
           </div>
         </li>
         <li class="reviews__item reviews__item--fourth">
-          <img src="./img/img-Testimonials-desktop@1x.jpg" srcset="./img/img-Testimonials-desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <img src="./img/img-Testimonials-desktop@1x.png" srcset="./img/img-Testimonials-desktop@2x.png 2x" alt="Ольга Михайлова" width="364" height="480">
           <div class="reviews__wrapper">
             <div class="reviews__content-wrapper">
               <h3>Мария Четвертая</h3>
@@ -323,7 +327,7 @@
           </div>
         </li>
         <li class="reviews__item reviews__item--fifth">
-          <img src="./img/img-Testimonials-desktop@1x.jpg" srcset="./img/img-Testimonials-desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <img src="./img/img-Testimonials-desktop@1x.png" srcset="./img/img-Testimonials-desktop@2x.png 2x" alt="Ольга Михайлова" width="364" height="480">
           <div class="reviews__wrapper">
             <div class="reviews__content-wrapper">
               <h3>Наталья Пятая</h3>
@@ -342,7 +346,7 @@
           </div>
         </li>
         <li class="reviews__item reviews__item--sixth">
-          <img src="./img/img-Testimonials-desktop@1x.jpg" srcset="./img/img-Testimonials-desktop@2x.jpg 2x" alt="Ольга Михайлова" width="364" height="480">
+          <img src="./img/img-Testimonials-desktop@1x.png" srcset="./img/img-Testimonials-desktop@2x.png 2x" alt="Ольга Михайлова" width="364" height="480">
           <div class="reviews__wrapper">
             <div class="reviews__content-wrapper">
               <h3>Анна Шестая</h3>
