правит ошибки в секциях как поехать и хочу поехать

--- a/source/index.html
+++ b/source/index.html
@@ -116,7 +116,7 @@
         <form>
           <label for="want-go__phone-input-field">Телефон</label>
           <div class="want-go__form-wrapper">
-            <input class="want-go__phone-input" id="want-go__phone-input-field" type="tel" placeholder="телефон" required>
+            <input id="want-go__phone-input-field" type="tel" placeholder="телефон" required>
             <span class="want-go__error-message">Ошибка: неверный формат</span>
             <button class="want-go__callback-button btn" type="submit">Перезвоните мне</button>
           </div>
@@ -132,23 +132,23 @@
             Чтобы иметь возможность получить грант на обучение  от 4200 до 8400$, вы должны:
           </b>
           <ul>
-            <li>
-              <p class="how-go__condition">
+            <li class="how-go__condition">
+              <p>
                 Быть в возрасте от 16 до 30 лет
               </p>
             </li>
-            <li>
-              <p class="how-go__condition">
+            <li class="how-go__condition">
+              <p>
                 Иметь оконченное среднее образование
               </p>
             </li>
-            <li>
-              <p class="how-go__condition">
+            <li class="how-go__condition">
+              <p>
                 Иметь документально подтверждённые еврейские корни  и пройти консульскую проверку
               </p>
             </li>
-            <li>
-              <p class="how-go__condition">
+            <li class="how-go__condition">
+              <p>
                 За последние 2 года быть не больше 3х месяцев
                 подряд непрерывно в Израиле.
               </p>
