--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Программы обучения в Израиле</title>
     <link rel="stylesheet" href="./css/style.min.css">
-    <link rel="preload" href="./fonts/FiraSans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/FiraSans.woff2" as="font">
     <link rel="preload" href="./fonts/FiraSans-Bold.woff2" as="font">
     <link rel="preload" href="./fonts/Montserrat-Bold.woff2" as="font">
     <link rel="preload" href="./fonts/Montserrat-Regular.woff2" as="font">
@@ -37,7 +37,7 @@
         <h2>О программе</h2>
         <p>«Маса» — совместный проект правительства Израиля и Еврейского агентства Сохнут. Более 250 учебных программ (60 на русском) и возможность стажировки в Израиле. В течение освоения программ предусмотрен грант от 4200 до 8400$.</p>
         <button type="button">play</button>
-      </section asidid>
+      </section>
       <section class="programms">
         <h2>Программы</h2>
         <div class="programms__wrapper">
