--- a/source/index.html
+++ b/source/index.html
@@ -489,64 +489,68 @@
           </div>
         </div>
       </section>
-      <footer class="page-footer container">
-        <a class="page-footer__logo" href="#">
-          <img src="./img/logo-footer-desktop@1x.png" srcset="./img/logo-footer-desktop@2x.png" alt="Логотип программы маса" width="85" height="27">
-        </a>
-        <p>
-          Copyright someDesignCompany ©2019
-        </p>
-        <ul class="page-footer__social-list">
-          <li>
-            <a href="#">Наш фейсбук
-              <svg class="page-footer__icon-facebook" width="24" height="24">
-                <use xlink:href="./img/sprite_auto.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#">Наш твиттер
-              <svg class="page-footer__icon-twitter" width="24" height="24">
-                <use xlink:href="./img/sprite_auto.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#">Наш инстаграм
-              <svg class="page-footer__icon-instagram" width="24" height="24">
-                <use xlink:href="./img/sprite_auto.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </footer>
-      <div class="modal-position">
-        <section class="modal-order-callback">
-          <h2 class="visually-hidden">Форма заказа обратного звонка</h2>
-          <p class="modal-order-callback__title">Заказать звонок</p>
-          <p class="modal-order-callback__message">Оставьте ваши контактные данные, мы свяжемся с вами в течение рабочего дня и обязательно поможем найти ответ на ваш вопрос!</p>
-          <form autocomplete="off" class="modal-order-callback__form">
-            <input type="text" name="name" placeholder="имя" required>
-            <input id="modal-order-callback__phone-input-field" type="tel" name="telephone" placeholder="телефон" required>
-            <span class="modal-order-callback__error-message">Ошибка: неверный формат</span>
-            <input class="btn" type="submit" value="Перезвоните мне">
-            <input id="modal-checkbox" type="checkbox" name="agree" required>
-            <label class="modal-order-callback__checkbox-label" for="modal-checkbox">
-              Нажимая на кнопку, вы даёте согласие на обработку персональных данных
-            </label>
-          </form>
-          <button type="button" class="modal-order-callback__close-button"></button>
-        </section>
-        <section class="modal-success">
-          <span></span>
-          <h2 class="modal-success__title">Заявка принята</h2>
-          <p class="modal-success__message">Мы приняли ваши данные и вскоре мы перезвоним вам для уточнения деталей!</p>
-          <button type="button" class="btn">понятно</button>
-          <button type="button" class="modal-success__close-button"></button>
-        </section>
-      </div>
-      <script src="./js/vendor.js"></script>
-      <script src="./js/main.js"></script>
     </main>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="page-footer__wrapper">
+          <a class="page-footer__logo" href="#">
+        <img src="./img/logo-footer-desktop@1x.png" srcset="./img/logo-footer-desktop@2x.png" alt="Логотип программы маса" width="85" height="27">
+      </a>
+          <p>
+        Copyright someDesignCompany ©2019
+      </p>
+          <ul class="page-footer__social-list">
+        <li>
+          <a href="#">Наш фейсбук
+            <svg class="page-footer__icon-facebook" width="24" height="24">
+              <use xlink:href="./img/sprite_auto.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">Наш твиттер
+            <svg class="page-footer__icon-twitter" width="24" height="24">
+              <use xlink:href="./img/sprite_auto.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#">Наш инстаграм
+            <svg class="page-footer__icon-instagram" width="24" height="24">
+              <use xlink:href="./img/sprite_auto.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+        </div>
+      </div>
+    </footer>
+    <div class="modal-position">
+      <section class="modal-order-callback">
+        <h2 class="visually-hidden">Форма заказа обратного звонка</h2>
+        <p class="modal-order-callback__title">Заказать звонок</p>
+        <p class="modal-order-callback__message">Оставьте ваши контактные данные, мы свяжемся с вами в течение рабочего дня и обязательно поможем найти ответ на ваш вопрос!</p>
+        <form autocomplete="off" class="modal-order-callback__form">
+          <input type="text" name="name" placeholder="имя" required>
+          <input id="modal-order-callback__phone-input-field" type="tel" name="telephone" placeholder="телефон" required>
+          <span class="modal-order-callback__error-message">Ошибка: неверный формат</span>
+          <input class="btn" type="submit" value="Перезвоните мне">
+          <input id="modal-checkbox" type="checkbox" name="agree" required>
+          <label class="modal-order-callback__checkbox-label" for="modal-checkbox">
+            Нажимая на кнопку, вы даёте согласие на обработку персональных данных
+          </label>
+        </form>
+        <button type="button" class="modal-order-callback__close-button"></button>
+      </section>
+      <section class="modal-success">
+        <span></span>
+        <h2 class="modal-success__title">Заявка принята</h2>
+        <p class="modal-success__message">Мы приняли ваши данные и вскоре мы перезвоним вам для уточнения деталей!</p>
+        <button type="button" class="btn">понятно</button>
+        <button type="button" class="modal-success__close-button"></button>
+      </section>
+    </div>
+    <script src="./js/vendor.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
