правит замечания по линтеру, кроме svguse

--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
     <script src="js/svguse.js" defer></script>
   </head>
   <body>
-    <div id="wrap">
+    <div class="wrap">
       <div class="content">
         <div class="intro-header-wrapper">
         <header class="page-header container">
